--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
     "cors": "^2.8.5",
+    "cookie-parser": "^1.4.6",
     "stripe": "^14.3.0",
     "aws-sdk": "^2.1490.0"
   },
