--- a/backend/package.json
+++ b/backend/package.json
@@ -20,7 +20,9 @@
     "cors": "^2.8.5",
     "cookie-parser": "^1.4.6",
     "stripe": "^14.3.0",
-    "aws-sdk": "^2.1490.0"
+    "aws-sdk": "^2.1490.0",
+    "@aws-sdk/client-s3": "^3.750.0",
+    "@aws-sdk/s3-request-presigner": "^3.750.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
