--- a/backend/package.json
+++ b/backend/package.json
@@ -22,7 +22,8 @@
     "stripe": "^14.3.0",
     "aws-sdk": "^2.1490.0",
     "@aws-sdk/client-s3": "^3.750.0",
-    "@aws-sdk/s3-request-presigner": "^3.750.0"
+    "@aws-sdk/s3-request-presigner": "^3.750.0",
+    "@aws-sdk/s3-presigned-post": "^3.750.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
